@@ -7,3 +7,4 @@ ok(Date::Japanese::Holiday->new(2003, 3, 21)->is_holiday);
 ok(Date::Japanese::Holiday->new(2003, 9, 23)->is_holiday);
 
 
+
